Fix overlapping animation issue

--- a/src/style.pcss
+++ b/src/style.pcss
@@ -59,7 +59,6 @@ code {
 .quote-content {
     height: 172.865px;
     opacity: 0;
-    transition: all 0.1s ease;
 }
 
 .inverted-comma {
